--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
                         <span class="tech-tag">CSS3</span>
                     </div>
                     <span class="project-status status-completed">Completed</span>
-                    <span><a href="https://din-live-demo-länk.com" target="_blank">Live Demo</a></span>
+                    <span><a href="https://drink-and-cocktail-explorer.netlify.app" target="_blank">Live Demo</a></span>
                 </div>
             </div>
 
