--- a/projects.html
+++ b/projects.html
@@ -105,6 +105,7 @@
                         <span class="tech-tag">CSS3</span>
                     </div>
                     <span class="project-status status-completed">Completed</span>
+                    <span><a href="https://denise-todo-list-app.netlify.app" target="_blank">Live Demo</a></span>
                 </div>
             </div>
 
